# discrete-math

./: README.md
01/set-wrapper/: pyproject.toml
01/set-wrapper/src/: context.py  main.py  menu.py  scenes.py  set_wrapper.py  types.py
property-finder/: .gitignore  pyproject.toml
property-finder/src/property_finder/: cli.py  main.py  matrix.py
set-calculator/: pyproject.toml
set-calculator/src/: context.py  menu.py  set_wrapper.py
