[tool.poetry]
name = "property-finder"
version = "0.1.0"
description = "Define list of properties for given relation on sets"
authors = ["wnkbll <arzhevitin.g@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"

[tool.poetry.scripts]
property = "property_finder.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"